examples/validation_error.rs.example
// This file demonstrates compile-time validation errors.
// Rename this file to .rs to see the errors.

use aide::axum::IntoApiResponse;
use axum::response::Json;
use rovo::rovo;

// Error: Invalid status code (must be 100-599)
/// Invalid status code example
///
/// @response 999 Json<String> This will fail - 999 is not a valid HTTP status code
#[rovo]
async fn invalid_status_code() -> impl IntoApiResponse {
    Json("test".to_string())
}

// Expected error message:
// error: Invalid status code 999 on line 4: HTTP status codes must be between 100-599
